@@ -1,9 +1,10 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.14:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.15:
 
 Epson EC-4020 Series
 Epson EC-4030 Series
 Epson EC-4040 Series
 Epson EC-C7000 Series
+Epson EM-C800BAM
 Epson EM-C800 Series
 Epson EP-50V Series
 Epson EP-879A Series
@@ -15,6 +16,7 @@ Epson EP-884A Series
 Epson EP-885A Series
 Epson EP-886A Series
 Epson EP-982A3 Series
+Epson EP-C800BAM
 Epson EP-C800 Series
 Epson ET-2830 Series
 Epson ET-2840 Series
