@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.13-1.x86_64.rpm 4040882 BLAKE2B ec49e49beb5f15f9d448010d74dbdd75070693802172436698755743c68218d249c2a23c4eef5d909bd69d03a1bd7cebe0f48bc09f0972989bd4ae0d7494d800 SHA512 d52dce98bd858e5fd9e9a36b2f69359853e38d2c76d3899feebc5e9a42bc7d569201c94b80b89969a1d01a7e6194840d45467bf4b616d187692de63b10a53868
 DIST epson-inkjet-printer-escpr2-1.2.14-1.x86_64.rpm 4067634 BLAKE2B 19939bd2bc35a97f39e4ee5302440cbadec809ce525bf24a33c05f68d7820318c98101041022ffa69a5a094581cc8506e7a6609f48d650499855fc24a15e3ff4 SHA512 2ccf866f9a0a3ca4809d27fd4f4a9a4fb77be15cbd9be899f35e86e30a04c18a5826277f390f5bd3892c0bab914018734cd21e78327ac9d60ee243b59325cdf8
+DIST epson-inkjet-printer-escpr2-1.2.15-1.x86_64.rpm 4100099 BLAKE2B 8a6d4cb3d842df53f2ac1788c286f4c906f2762c32d5bfaff1eda3aebb85ee5dd9fa5456906cb925cda5a33b2524b97f9398fafc8db50fc6e731ec55fab9a12c SHA512 ac6dba1c281d76fbdee46348bc88b9ceb64d9d0870f114b430cac69da9cb7f697a344be771832b9fef408f0289d4574d2e01578592d3295650b0208ae3df2582
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1843 BLAKE2B bbe1b11046a92a16e9d0e76298620cb1b288d60569a89f705f37bd20b502dc9d54661e021bfae25075397f06db7c73f2245e7860d72533b1b96d43615a05e13e SHA512 3a0c9d2fabee1b1d0d87f7a794732539dd3c5685e16a9e32ea101c65f84016029e59e4dd7005c57d1bf3dc7195527bd99b3e0c8ce2ae13047659f7ba25a2b53c
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.13.ebuild 1415 BLAKE2B 9679ed52901bce158bb340207f2d3104d5d5551382452bc2fb21fd117a2dc4d0edfb4653663d3fbda396a5500322dc48739d011d182c906f79fd7cd325f760a3 SHA512 c19b1966a7b8a5a85ae467633fb80d7b14906d5fcd7e2a4883ae214a51201753f1700cff910832379c8709751bbae6fb739e4940c1e506eba79063846772a1fd
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.14.ebuild 1415 BLAKE2B 10ee452f4a1038d3703e8d7f70fb0861a73d61e64b464497a85fa853f407185bd0eb9800e59ebaf99794621cfbc11ef246ca9b05217a550ecf1596d5b55e34e9 SHA512 96d5fd062cb507076dd7cbbd0ef3a1239a2466ffbe0d860b5420de3d624892ff1c9feeb61e33f3fd648fa21b0ef7caaaf9dc8b8b2e83e6e22654cf94764b029a
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.15.ebuild 1415 BLAKE2B 22fdd8ae6259351b822f330d35d7b37fa3b7582bd895dcd9685f150ec46a11aff88fa1dbbb45d68c6a7b473427bea4598f5d4cc1a38b92c9915020e357d200d1 SHA512 09625060ac2539013d2ef37f213d636ee6cc906075625e99bd3aef24024713e3355ca844d6e937745aa29fd3d5ef28e41f13a38c5e3635d25089d0533c96a099
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
