@@ -1,9 +1,9 @@
 AUX gcc-no-implicit-function-declaration-1.1.15.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 AUX gcc-no-implicit-function-declaration-1.2.10.patch 2421 BLAKE2B 158c074ec7d37ee1a09b29bbee21c29da0ff2784fe25b22f64d2b199b07a8d8c90ca92477f7c284ded194c1a66bee219943b7c827bf7fb1b58227b3e7caedc3b SHA512 55533abc7b4f4cfa6c95868726721e59d187601722c0b2daa38d913f15ce9c695ae4c900274c46a770cfcdf85c46f77c724b936686a70bae34be5660c41a34aa
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.13-1.tar.gz 5497262 BLAKE2B 41381103031c1aee9dd300fd002e40e5b1a9caa97cbe995c55a4a8a986cfa1df48fd73dce4276aff9d14f428cd8d291c48cd2bb64db3c0f6062b4533af88ebbf SHA512 7488db8b8529a8c8b9ca5b1eba7074e2009cfcaab45668069df70a742f79101dbf1c771703428f4ef37a1d6f40ac28e36e3ba18a0cf3bb3bf52e29d088c7e33e
 DIST epson-inkjet-printer-escpr2-1.2.14-1.tar.gz 5517765 BLAKE2B 94c56e7f36e05ce3464ac8e4e1d12c770f9235973465f374b2dbe6cefaf43c9647594ec3c6513501d4583a97181467d83fb0eed9d8d5264f7cc07078e1038e77 SHA512 1e5595c731957a9a2d0d009f63e75ab78bfa76312ee767583c352956b39cb51e56ac0a95c9d30a57ae2c2b27cc89a9d7f02011e201c51c4bb4362505dbd5a712
+DIST epson-inkjet-printer-escpr2-1.2.15-1.tar.gz 5560479 BLAKE2B 8180fe06df8175ec31044b0eec2a125b9567c11a827343401a07e59e8bd93e689617b9b29364374f1d6ba6d6bca320d6615f601791c59e966d3a4d63f7adbeb0 SHA512 62cd5161f65f8ca6f8c1a8bb755e06eb147d4a06b5f796a8068ed9235b3abf38e6ccb10e82bdd93fddc085b90a7f9332e024ba09679aa08490a05735c0372653
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1526 BLAKE2B a7d8e558a18c211faf4c971074e88daf7c25b6b0c4ec0a9e5a4ef3657527fd3fa11c21a8aa7db42f419eeb1d45780635433d3e9efc8bd8dbc4b50420bc199443 SHA512 ce66e10bbff3de69007c0edf784c88578f2fcec6b9b81b745eb59541fba73dd43749abd35f58e3e4e13bd7d0a5f2196705a7438123d30af39d66cf1daa48ed64
-EBUILD epson-inkjet-printer-escpr2-1.2.13.ebuild 1898 BLAKE2B ce335173fde0e23ee9ecceed4c387aa71135e4a8c0a91f564c1ac257eb2b190055a53a995507e4655d317c57fefe6a091c7b66b1c261e76dabf792a353a54c87 SHA512 0e84f27c0efd55a86d1836576bfc928dd2752b0920e8c90b56dc335c7cc19dea2cd5040788c2624d9555deb596bf1023896c7325e30376cca62da71907037bef
 EBUILD epson-inkjet-printer-escpr2-1.2.14.ebuild 1898 BLAKE2B e4f5ad7b7bd07c9a772ba901d9111bde9680ac85389cba01805b867ac7158c8eb09eeb0b3e685ea6311a46f97eca693f2c893dcb25ee3e7f13a94008f69d63c3 SHA512 66316692815306626b3be8192b13f99b35436ca632d25e7c35ac4ff5d2656f7c0101f99ce9204e3ad382088c95dadcbe79913563e2849c007b35f636fb96062b
+EBUILD epson-inkjet-printer-escpr2-1.2.15.ebuild 1898 BLAKE2B feadbd9d5979f37ff30c8fffdad740a696fd4ddb470239aea693e0e7972cca783f1ef6dc04accd11f764c1bb4b36a988184ddf4f853550ce63d325bf52715f65 SHA512 c2cb83c7fe0bea73d05c884a83a7e856a772e1586e833164f2fdd6c11b403ad86e2c681b57c411d3dc93a5908a1b1e4077d9ecf25ebf53724388389b845563c2
 MISC metadata.xml 775 BLAKE2B 4877278409048049f2b34c2f8603b0845bfbabdb5823b4ae6ab9559cfa64690a059e8d8b2d78990d443464e3604a7c50a1ea210f324cdd4beb7c103e25250f7c SHA512 76daff7f5cab31c3372e9e764497870ee78f1a22ff44225b943fe7f0e7545b56ad7a0cf4544213089d855e6f478facbfc40d43dfdc78abfa11315e6a03d83ac1
