@@ -4,7 +4,7 @@
 EAPI=8
 inherit autotools
 
-DSC_F="dsc/f/03/00/16/00/25/3c39b66e778e33199742d9f653f7506778d75b7f"
+DSC_F="dsc/f/03/00/16/06/85/fddc1d5996d0cab4dceea35852a2e430fb124993"
 MY_PV="${PV}-1"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver"
